# graph-matching-based-crossview-registration

./: .gitignore  CMakeLists.txt  README.md
src/: basic_structs.h  camera.cc  camera.h  crossview_alignment.cc  crossview_alignment.h  optimizer.cc  optimizer.h  structure.cc  structure.h
src/alignment/: belief_propagation.cc  belief_propagation.h  common_functions.cpp  common_functions.h  converter_utm_latlon.cpp  ellipsoid_utm_info.h  iterative_fdcm.cpp  iterative_fdcm.h  main.cpp  registration_gps.cpp  registration_gps.h  registration_nogps.cpp  registration_nogps.h  resigtration_error_trans.h  rigid_transformation.cpp  rigid_transformation.h
src/utils/: basic_funcs.cc  basic_funcs.h  calibration.cc  calibration.h  cam_error_pose_absolute.h  converter_utm_latlon.h  converter_wgs84_utm.hpp  delaunator.hpp  epipolar_geometry.cc  epipolar_geometry.h  exif_reader.cpp  exif_reader.h  find_polynomial_roots_companion_matrix.cc  find_polynomial_roots_companion_matrix.h  gist.cpp  gist.hpp  gps_error_pose_absolute.h  gps_error_pose_raletive_angle.h  gps_error_pose_raletive_dis.h  homography_stereo_rectify.cc  homography_stereo_rectify.h  homography_stereo_rectify_util.cpp  homography_stereo_rectify_util.h  houghlines.cpp  houghlines.h  local_orientation.cc  local_orientation.h  lsd.cc  lsd.h  nanoflann_adaptor_all.h  nanoflann_utils_all.h  openmvs_util.h  polynomial.cc  polynomial.h  random.cc  random.h  reprojection_error_pose.h  reprojection_error_pose_cam.h  reprojection_error_pose_cam_xyz.h  reprojection_error_pose_xyz.h  (+10 more)
test/: CMakeLists.txt
test/test_alignment/: CMakeLists.txt  test_alignment.cc
